// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/button/Button Default 1`] = `
<button
  className=""
>
  ボタンだよてへ
</button>
`;

exports[`Storyshots atoms/button/Button Is Error 1`] = `
<button
  className="undefined"
>
  ボタンだよてへ
</button>
`;
